Fix possible hang on handshake

processHandShake operates on complete lines. If the data available does
not contain the full handshake message, the loop will therefore never return.

Task-number: QTBUG-51001
Change-Id: Ie87f5b5dee01116f463e84f06feab502ff5ac563
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>